Bug 336054 - It is possible to simultaneously select (highlight) text in multiple fields on a Form
Summary: It is possible to simultaneously select (highlight) text in multiple fields ...
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.8.3
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: ---
Assignee: Wojciech Kosowicz
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2014-06-10 16:57 UTC by Ian Balchin
Modified: 2019-02-18 19:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.4
Sentry Crash Report:
staniek: Usability+


Attachments
screenshot showing multiple fields highlighted (125.78 KB, image/png)
2014-06-11 22:24 UTC, Ian Balchin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-06-10 16:57:59 UTC
When you have highlighted a portion of text in one field, highlighting a portion of text in another field does not automatically cause the first area of highlighting to be deselected. You then have highlighted portions visible in multiple fields

Reproducible: Always

Steps to Reproduce:
1. Open any form to show data
2. Highlight a selected area of text in any one field
3. Repeat 2 for a second or more fields
Actual Results:  
The selected text in the first field remains highlighted along with the selected text in the second (or more) fields.

Expected Results:  
Highlighting a second selection of text in another field should cause the first selection of text to be deselected.

I find no previously reported bug.
Comment 1 Jarosław Staniek 2014-06-11 13:33:49 UTC
Thanks. Could you post a screenshot? Do you see the same issue regardless of widget type you use: Text Box or Text Editor? (I see it in Text Editor only)
Comment 2 Jarosław Staniek 2014-06-11 13:37:54 UTC
One thing is that selection in an unfocused Text Editor looks (in terms of colour) like a selection in a focused one. That's misleading. But if we agree that the fix is to de-select before focusing out, colour of inactive selection isn't relevant.
Comment 3 Ian Balchin 2014-06-11 22:24:49 UTC
Created attachment 87141 [details]
screenshot showing multiple fields highlighted

I believe that this behaviour affects only Text Editor type fields. Text Box type fields are exempt. The top row of fields are Text Box type. The first one 'Hash No' is highlighted but if I try and select text from others in that row - 'Subjec' or 'Date', then the text in 'Hash No' is deselected/

Ian
Comment 4 Wojciech Kosowicz 2014-06-15 21:28:16 UTC
Git commit a8682cc70002002201291a8e833f9656b6ab4884 by Wojciech Kosowicz.
Committed on 15/06/2014 at 12:40.
Pushed by wkosowicz into branch 'calligra/2.8'.

Unselecting text from for kexi's form text editor inactive element

KTextEdit does not provide deselect method therefore it had to be
implemented by manually moving cursor to the end in focusOutEvent
FIXED-IN: 2.8.4
REVIEW: 118744

M  +9    -0    kexi/plugins/forms/widgets/kexidbtextedit.cpp
M  +2    -0    kexi/plugins/forms/widgets/kexidbtextedit.h

http://commits.kde.org/calligra/a8682cc70002002201291a8e833f9656b6ab4884
Comment 5 Wojciech Kosowicz 2014-06-15 21:33:01 UTC
Git commit 2334439b5ffb2c665d98981ede3f21f68bc05314 by Wojciech Kosowicz.
Committed on 15/06/2014 at 12:40.
Pushed by wkosowicz into branch 'master'.

Unselecting text from for kexi's form text editor inactive element

KTextEdit does not provide deselect method therefore it had to be
implemented by manually moving cursor to the end in focusOutEvent
FIXED-IN: 2.8.4
REVIEW: 118744

M  +9    -0    kexi/plugins/forms/widgets/kexidbtextedit.cpp
M  +2    -0    kexi/plugins/forms/widgets/kexidbtextedit.h

http://commits.kde.org/calligra/2334439b5ffb2c665d98981ede3f21f68bc05314