Unselecting text from for kexi's form text editor inactive element

KTextEdit does not provide deselect method therefore it had to be
implemented by manually moving cursor to the end in focusOutEvent

BUG: 336054
FIXED-IN: 2.8.4
REVIEW: 118744